src/test/resources/entity_test/invalid/Employee3.entity

Employee3xxx { // entity name diferent from file name
  id : short { @Id @NotNull } ;
}
